CRUDs de Livro e Jogo e logica de EMprestimos